# Auth_sprint_2

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.tests.yaml  docker-compose.yaml  pyproject.toml  tests.Dockerfile
nginx/: localhost.crt  localhost.key  nginx.conf.template  nginx_entrypoint.sh  site.conf.template
requirements/: dev.txt  requirements.txt
src/: config.py  create_admin.py  pytest.ini  run.py
src/alembic/: env.py
src/alembic/versions/: 3a54163024fe_.py  494a3e99e78b_.py  d61643454402_.py  d61643454402_initital.py
src/app/: __init__.py  auth_api_schema.yaml  jwt.py  oauth_services.py  redis_db.py  telemetry.py
src/app/api/: sign_in.py  sign_out.py  social_auth.py  start_page.py  urls.py
src/app/api/v1/: change_user_params.py  exceptions.py  refresh_token.py  remove_social_account.py  role.py  role_manipulation.py  sign_in.py  sign_out.py  sign_up.py  social_auth.py  urls.py  (+2 more)
src/app/models/: __init__.py  login_history.py  role.py  user.py  user_role.py  user_social_account.py
src/app/social_services_utils/: __init__.py  base_data_parser.py  facebook_data_parser.py  google_data_parser.py  oauth_services.py  social_user_model.py  vk_data_parser.py  yandex_data_parser.py
src/app/tests/: base_auth_test_case.py  testing_data.py  tests_change_user_params.py  tests_history.py  tests_logout.py  tests_refresh_token.py  tests_remove_social_account.py  tests_role.py  tests_role_manipulation.py  tests_sign_in.py  tests_sign_up.py
src/scripts/: wait_for_dbs.sh
src/templates/: main.html
